--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,14 @@
-<!doctype html>
+//popup when clicked
+<!doctype html> 
 <html>
 
 <head>
     <title>Wardrobe</title>
-    <script src="popup.js"></script>
+    <script src="popup.js"></script> //runs this script
 </head>
 
 <body>
     <h1> My Wardrobe </h1>
-    <button id="checkPage";">Check this page now!</button>
+    <button id="checkPage";">Check this page now!</button> //button to scan page
 </body>
 </html>
