making button work properly

--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,10 @@
 
 <head>
     <title>Wardrobe</title>
-    <script src="popup.js"></script> //runs this script
 </head>
 
 <body>
     <h1> My Wardrobe </h1>
-    <button id="checkPage";">Check this page now!</button> //button to scan page
+    <button id="checkPage"><script src="content.js"></script>Check this page now!</button> //button to scan page
 </body>
 </html>
