--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,6 @@
 
 <body>
     <h1> My Wardrobe </h1>
-    <button id="checkPage"><script src="content.js"></script>Check this page now!</button> //button to scan page
+    <button id="checkPage"><script type="module" src="content.js"></script>Check this page now!</button> //button to scan page
 </body>
 </html>
