--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 //popup when clicked
-<!doctype html> 
+<!doctype html>
 <html>
 
 <head>
@@ -8,6 +8,14 @@
 
 <body>
     <h1> My Wardrobe </h1>
-    <button id="checkPage"><script type="module" src="content.js"></script>Check this page now!</button> //button to scan page
+    <button id="checkPage"><script src="background.js"></script>Check this page now!</button> //button to scan page
+
+    <!-- wrapper element -->
+    <div class="results-wrap">
+        <div class="result-items">
+            <!-- place where we going to inject results -->
+        </div>
+    </div>
 </body>
+
 </html>
